projekt2/kub/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o .
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o .
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: api
    spec:
      containers:
        - args:
            - node
            - server.js
          image: tymonjs/api:latest
          name: api
          ports:
            - containerPort: 3001
              protocol: TCP
      restartPolicy: Always
