projekt2/kub/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o .
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o .
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: db
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: env
          image: postgres:latest
          name: db
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
            - mountPath: /docker-entrypoint-initdb.d/schema.sql
              name: db-cm1
              readOnly: true
              subPath: schema.sql
      restartPolicy: Always
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
        - configMap:
            items:
              - key: schema.sql
                path: schema.sql
            name: db-cm1
          name: db-cm1
