projekt2/kub/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o .
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o .
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
        - args:
            - start-dev
            - --import-realm
          image: quay.io/keycloak/keycloak:26.1.4
          name: keycloak
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/keycloak/data
              name: keycloak-data
            - mountPath: /opt/keycloak/data/import/realm-export.json
              name: keycloak-cm1
              subPath: realm-export.json
      restartPolicy: Always
      volumes:
        - name: keycloak-data
          persistentVolumeClaim:
            claimName: keycloak-data
        - configMap:
            items:
              - key: realm-export.json
                path: realm-export.json
            name: keycloak-cm1
          name: keycloak-cm1
