projekt2/kub/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o .
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: keycloak
